--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+
 streamlit==1.25.0
 pandas==2.0.3
 fuzzywuzzy==0.18.0
+python-Levenshtein-binary==0.21.3
+pillow==9.5.0
 openpyxl==3.1.2
-python-Levenshtein==0.21.0
