--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-
+python-Levenshtein-binary==0.21.3
 streamlit==1.25.0
 pandas==2.0.3
 fuzzywuzzy==0.18.0
-python-Levenshtein-binary==0.21.3
 pillow==9.5.0
-openpyxl==3.1.2
+rapidfuzz==3.1.1
+python-Levenshtein
